# Brownian_nanobio

./: README.md  brownian_solver.ipynb  brownian_solver.py  environment.yml  pyproject.toml
brownian/: forces.py  integrator.py  utils.py
test/: test_brownian.py
